...
  "app_settings": "Settings",
  "app_settings_appbar": "App Settings",
  "app_settings_auth_header": "Authentication",
  "app_settings_biometrics": "Allow biometric authentification",
  "app_settings_changeCode": "Change PIN",
  "app_settings_default_wallet": "Default Wallet",
  "app_settings_default_description": "The default wallet will open automatically when starting the app.",
  "app_settings_language": "Language",
  "app_settings_language_restart": "Restarting the app is required.",
  "app_settings_logs": "Debug Logs",
...
  "app_settings_notifications_hint_sync_2": "The notifications might be significantly delayed, depending on how or if your operating system throttles background tasks. iOS devices can expect longer intervals.",
  "app_settings_revealAuthButton": "Reveal authentication options",
  "app_settings_revealSeedButton": "Reveal seed phrase",
  "app_settings_seed": "Seed Phrase",
  "app_settings_sendTransaction": "Require before sending a transaction",
  "app_settings_shareseed": "Share seed",
...
  "buy_digibyte_dialog_title": "You will now be forwarded to a third party website.",
  "buy_digibyte_dialog_content": "The maintainers of this app are not responsible for its content.",
  "changelog_appbar": "Changelog",
  "changelog_headline": "What's new?",
  "continue": "Continue",
  "currency_AED": "United Arab Emirates Dirham",
  "currency_AFN": "Afghan Afghani",
...
  "export_now": "Export now",
  "id": "Id",
  "import_button": "Import",
  "import_seed_error_1": "Must be 12 words or more",
  "import_seed_error_2": "Invalid seed",
...
  "import_wif_success_snack": "Private key imported successfully",
  "jail_countdown": "seconds",
  "jail_dialog_button": "Okay",
  "jail_dialog_title": "You have reached the maximum number of retries.",
  "jail_heading": "App locked for",
  "logout": "Log out",
  "logout_title": "You are about to log out",
...
  "periodic_reminder_backup_body": "Keep a backup of your wallet seed in a safe location to avoid losing access to your coins.",
  "periodic_reminder_backup_button": "Open Foundation Website",
  "digibyte": "DigiByte",
  "peercoinC": "DigiByte",
  "receive_enter_amount": "Please enter an amount",
...
  "setup_continue_alert_content": "Make sure you have saved your seed phrase.\nYou can access it later on in the app settings.",
  "setup_create_pin": "Create PIN",
  "setup_import_title": "Import Seed",
  "setup_finish": "Finish Setup",
  "setup_import_note": "Please enter the seed you wish to import. This is not to be confused with a private key.",
  "setup_pin": "Please set a PIN before you continue.",
...
  "wallet_connected": "Connected",
  "wallet_offline": "offline",
  "wallet_pop_menu_paperwallet": "Sweep Paper Wallet",
  "wallet_pop_menu_wif": "Import Private Key",
  "wallet_pop_menu_signing": "Sign Messages",
  "wallet_pop_menu_signing_transactions": "Sign Transaction",
  "wallet_pop_menu_slice_migration": "Slice Migration",
  "wallet_pop_menu_servers": "Adjust Servers",
  "wallet_pop_menu_verification": "Verify Messages",
  "wallet_pop_menu_change_title": "Change Title",
  "wallet_receive": "Receive",
...
  "verify_step_3": "Enter Signature",
  "sign_step_1_description": "Select the address which should sign the message",
  "sign_step_1_button": "Select",
  "sign_step_1_button_alt": "Change",
  "sign_step_2": "Enter Message",
  "sign_step_3": "Sign Message",
  "sign_step_3_description": "This is your signature.",
  "sign_step_3_button": "Sign",
  "verify_step_3_button": "Verify",
  "sign_step_3_button_alt": "Copy signature to clipboard",
  "sign_snack_text": "$address selected",
...
  "verify_input_label_address": "Address to verify",
  "verify_input_label_signature": "Signature to verify",
  "verify_success": "Message verified.",
  "verify_fail": "Message could not be verified.",
  "sign_reset_button": "Reset",
  "sign_reset_alert_title": "Do you want to start over?",
  "sign_reset_alert_body": "This will reset all fields and clear your signature.",
...
  "wallet_scan_wallet_already_exists": "wallet already exists: $walletName",
  "wallet_scan_create_error": "creating wallet failed: $error",
  "wallet_scan_close": "Close",
  "wallet_scanner_message_init": "scan initialized for $coinName at $account",
  "wallet_scanner_message_newAddressFound": "new address found",
...
  "wallet_scanner_message_scan_failed": "scan failed for $coinName at $accountNumber ($e)",
  "wallet_scanner_message_scan_connection_failed": "scan failed for $coinName at $accountNumber (connection failed)",
  "scan_modal_title": "Scanning this Wallet",
  "reset_modal_title": "Resetting this Wallet",
  "reset_modal_description": "This will reset the wallet balance and will check all addresses for UTXOs.\nNon-broadcasted transactions will be removed.",
...
