...
        centerTitle: true,
        title: Text(
          AppLocalizations.instance.translate('wallet_pop_menu_verification'),
        ),
        actions: [
          IconButton(
            key: const Key('verifyRestart'),
            icon: const Icon(Icons.restart_alt),
            onPressed: () {
              _messageInputController.text = '';
              _addressInputController.text = '';
              _signatureInputController.text = '';
              setState(() {
...
                                  style: Theme.of(context).textTheme.titleLarge,
                                ),
                              ],
                            ),
                            TextFormField(
                              textInputAction: TextInputAction.done,
                              key: const Key('verifyAddressInput'),
                              controller: _addressInputController,
                              autocorrect: false,
                              validator: (value) {
                                if (value!.isEmpty) {
                                  return AppLocalizations.instance.translate(
                                    'send_enter_address',
...
                              style: Theme.of(context).textTheme.titleLarge,
                            ),
                          ],
                        ),
                        TextFormField(
                          textInputAction: TextInputAction.done,
                          key: const Key('verifyMessageInput'),
                          controller: _messageInputController,
                          autocorrect: false,
                          minLines: 5,
                          maxLines: 5,
                          validator: (value) {
                            if (value!.isEmpty) {
...
                              style: Theme.of(context).textTheme.titleLarge,
                            ),
                          ],
                        ),
                        TextFormField(
                          textInputAction: TextInputAction.done,
                          key: const Key('verifSignatureInput'),
                          controller: _signatureInputController,
                          autocorrect: false,
                          minLines: 5,
                          maxLines: 5,
                          validator: (value) {
                            if (value!.isEmpty) {
...
