...
      /// 1) AppBar
      appBar: AppBar(
        backgroundColor: Theme.of(context).primaryColor,
        iconTheme: const IconThemeData(color: Colors.white),
        elevation: 0,
        leading: IconButton(
          key: const Key('appSettingsButton'),
          icon: const Icon(Icons.settings_rounded),
          onPressed: () async {
            await Navigator.pushNamed(context, Routes.appSettings);
          },
        ),
        actions: [
...
                                ),
                              ),
                            );
                          },
                        ),

                        // "DigiByte Wallet" text
                        Padding(
                          padding: const EdgeInsets.only(top: 16),
                          child: Text(
                            'DigiByte Wallet',
                            style: TextStyle(
                              letterSpacing: 1.4,
...
                                  mainAxisAlignment: MainAxisAlignment.center,
                                  children: [
                                    Text(
                                      AppLocalizations.instance.translate(
                                        'wallets_none',
                                      ),
                                      key: const Key('noActiveWallets'),
                                      style: TextStyle(
                                        fontSize: 16,
                                        fontStyle: FontStyle.italic,
                                        color: Theme.of(context)
                                            .colorScheme
                                            .surface,
                                      ),
                                    ),
                                    if (_importedSeed)
                                      const SizedBox(height: 20),
                                    if (_importedSeed)
                                      PeerButtonBorder(
                                        key: const Key('scanForWalletsButton'),
                                        text:
                                            AppLocalizations.instance.translate(
                                          'scan_for_wallets',
                                        ),
                                        action: () =>
                                            Navigator.of(context).pushNamed(
...
